add screenshots and save as CircleCI artefacts