@@ -127,7 +127,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-<!--                            <includeScope>runtime</includeScope>-->
+                            <!--                            <includeScope>runtime</includeScope>-->
                             <outputDirectory>${project.build.directory}/release-directory/lib</outputDirectory>
                         </configuration>
                     </execution>
@@ -174,12 +174,11 @@
 
     <profiles>
         <profile>
-            <id>desktop</id>
+            <id>mac</id>
             <activation>
-                <property>
-                    <name>desktop</name>
-                    <value>true</value>
-                </property>
+                <os>
+                    <family>mac</family>
+                </os>
             </activation>
             <build>
                 <plugins>
@@ -188,7 +187,6 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>3.0.0-M5</version>
                         <configuration>
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <argLine>
                                 --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                                 --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
@@ -201,13 +199,12 @@
             </build>
         </profile>
         <profile>
-            <id>notdesktop</id>
+            <id>unix</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
-                <property>
-                    <name>desktop</name>
-                    <value>false</value>
-                </property>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
             </activation>
             <build>
                 <plugins>
@@ -216,7 +213,6 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>3.0.0-M5</version>
                         <configuration>
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <argLine>
                                 --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                                 --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
@@ -227,6 +223,31 @@
                                 -Dmonocle.platform=Headless
                                 -Dprism.order=sw
                                 -Dprism.fontdir=/usr/share/fonts
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M5</version>
+                        <configuration>
+                            <argLine>
+                                --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
+                                --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --enable-preview
                             </argLine>
                         </configuration>
                     </plugin>
